# AI-Powered-Ransomware-Intelligence-Agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY_AUDIT.md  blog_post.md  pyproject.toml  run_demo.bat
.github/workflows/: validate-workflows.yml
demo/: README.md  expected_output.md  run_demo.py  scenario.json
docs/: api_reference.md  architecture.md  contributing.md  mcp_setup.md  setup_guide.md
examples/: Gamma_Presentation_Recipe.md  QA_Instructor_Guide.md  Ransomware_Threat_Brief_Sample.html  Ransomware_Threat_Brief_Sample.md  Slack_Alert_Sample.txt
integrations/osquery/: README.md  adapter.py  ransomware_pack.conf
integrations/siem_soar/: README.md  webhook.py
integrations/velociraptor/: README.md  adapter.py  artifact_collector.yaml
langgraph_agent/: __init__.py  agent.py  config.py  graph.py  llm_backends.py  state.py
langgraph_agent/nodes/: attribute_group.py  correlate_ttps.py  enrich_intel.py  generate_brief.py  match_note.py  parse_artifacts.py  search_iocs.py
mcp_server/: __init__.py  config.py  models.py  server.py
mcp_server/api/: __init__.py  client.py  free_api.py  pro_api.py
mock_api/: README.md  server.py
n8n_workflows/: 101_ransomware_threat_monitor.json  101_ransomware_threat_monitor_DEMO.json  101_ransomware_threat_monitor_ollama.json  200_ransomware_intel_advanced.json  200_ransomware_intel_advanced_ollama.json  201_ioc_enrichment_pipeline.json  300_full_ir_pipeline.json  DEMO_GUIDE.md  PRESENTATION_OUTLINE.md  README.md
scripts/: validate_workflows.py
templates/: executive_summary.md.j2  ir_brief.md.j2  negotiation_advisory.md.j2  threat_landscape.md.j2
tests/: __init__.py  quick_test.py  test_api_client.py  test_confidence_scoring.py  test_ir_brief_generation.py  test_live_api.py  test_ransom_note_matching.py  test_ttp_correlation.py  test_workflows.py
(+29 files in other folders)
