[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ransomware-intel-agent"
version = "0.1.0"
description = "AI-powered ransomware intelligence agent using ransomware.live API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ransomware Intel Agent Contributors" },
]
keywords = ["ransomware", "dfir", "threat-intelligence", "mcp", "incident-response"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "ollama>=0.4.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
langgraph = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
]
integrations = [
    "flask>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
]
all = [
    "ransomware-intel-agent[langgraph,integrations,dev]",
]

[project.scripts]
ransomware-mcp = "mcp_server.server:main"
ransomware-agent = "langgraph_agent.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "langgraph_agent", "integrations"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
